# CotrikMeshing

./: CMakeLists.txt  README.md  build.sh
GeodesicsOnMeshes/Examples/: GeodesicDistanceExample.cxx  GeodesicPathExample.cxx
GeodesicsOnMeshes/Source/: vtkPolygonalSurfaceContourLineInterpolator2.cxx  vtkPolygonalSurfaceContourLineInterpolator2.h
app/: ajust_polycube.cpp  align_polycube_surface.cpp  align_polycube_surface_patch.cpp  align_polycube_surface_patch2.cpp  arap_tet.cpp  boundary.cpp  calc_scaled_jacobian.cpp  check_overlap.cpp  check_overlap_clean.cpp  cone_optimize.cpp  convert_file.cpp  detect_overlapping_area.cpp  display_corresponding_patches.cpp  display_highlight_patch.cpp  display_mesh.cpp  extract_singularities.cpp  extract_surface.cpp  gen_rot_meshes.cpp  hex_map.cpp  hex_refine.cpp  hexdensity.cpp  hexgen.cpp  hexgen_align.cpp  hexgen_auto.cpp  hexgen_clean.cpp  hexgen_fast.cpp  hexgen_plus.cpp  hexgen_s.cpp  hexgen_surface.cpp  hexgen_surface_round.cpp  hexify.cpp  hexify_fast.cpp  hexify_plus.cpp  hexmapback.cpp  hexsmooth.cpp  magnify.cpp  magnify_Cp.cpp  magnify_multi_segments.cpp  magnify_multi_segments_auto.cpp  magnify_multi_segments_scales.cpp  (+28 more)
src/: CMakeCache.txt  FocusContextMagnifier.cpp  FocusContextMagnifier.h  GeoUtil.cpp  GeoUtil.h  GeometricStruct.cpp  GeometricStruct.h  Iterator.h  Log.cpp  Log.h  Makefile  Mesh.cpp  Mesh.h  MeshDisplayer.cpp  MeshDisplayer.h  MeshFileReader.cpp  MeshFileReader.h  MeshFileWriter.cpp  MeshFileWriter.h  Parametrizer.cpp  Parametrizer.h  Patch.cpp  Patch.h  PolycubeMesh.cpp  PolycubeMesh.h  Selection.cpp  Selection.h  SimpleGeometryViewer.cpp  SimpleGeometryViewer.h  cmake_install.cmake  include.cpp  include.h
src/GeodesicsOnMeshes/Examples/: Makefile  cmake_install.cmake
src/GeodesicsOnMeshes/FastMarching/: Makefile  cmake_install.cmake
src/GeodesicsOnMeshes/Source/: Makefile  cmake_install.cmake
src/GeodesicsOnMeshes/Testing/: CxxTests.cxx  Makefile  cmake_install.cmake
